Added MIDI encryption to score JSON
